--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@
 body {
   color: #1f1f31;
   font-family: 'Exo', sans-serif;
-  background-color: #f8f8f8;
 }
 
 a {
@@ -366,6 +365,65 @@ h3 {
 
 .portfolio-section {
   background-color: #fff;
+  padding: 31px 0 39px;
+}
+
+.portfolio-section .title {
+  font-size: 31px;
+  font-weight: 500;
+  line-height: 24px;
+  text-transform: uppercase;
+}
+
+.portfolio-section .items {
+  margin-top: 44px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.portfolio-section .items .item {
+  width: 20%;
+  height: auto;
+  position: relative;
+  cursor: pointer;
+}
+
+.portfolio-section .items .item .item-image {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.portfolio-section .items .item .item-overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.65);
+  opacity: 0;
+  padding: 5px;
+  -webkit-transition-duration: .3s;
+       -o-transition-duration: .3s;
+          transition-duration: .3s;
+}
+
+.portfolio-section .items .item .item-overlay .item-text {
+  font-size: 20px;
+  color: #201f1f;
+}
+
+.portfolio-section .items .item:hover .item-overlay {
+  opacity: 1;
 }
 
 /* ADVANTAGES SECTION */
@@ -463,4 +521,459 @@ h3 {
   background: url("../img/advantage-5.png") 50% 0 no-repeat;
   margin-left: 57px;
   width: 267px;
+}
+
+/* TESTIMONIALS SECTION */
+
+.testimonials-section {
+  padding-top: 62px;
+  padding-bottom: 105px;
+}
+
+.testimonials-section .title {
+  margin-bottom: 64px;
+  font-size: 31px;
+  font-weight: 500;
+  line-height: 22px;
+  text-transform: uppercase;
+}
+
+.testimonials-section .slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.testimonials-section .slider .slick-active img {
+  float: left;
+  outline: none;
+}
+
+.testimonials-section .slider .slick-active.slick-center img {
+  -moz-transform: scale(1.12);
+  -ms-transform: scale(1.12);
+  -o-transform: scale(1.12);
+  -webkit-transform: scale(1.12);
+  color: #e67e22;
+  opacity: 1;
+  transform: scale(1.12);
+  float: none;
+}
+
+.testimonials-section .slider .slick-center + .slick-active img,
+.testimonials-section .slider .slick-center + .slick-active + .slick-active img {
+  float: right;
+}
+
+.testimonials-section .slider img {
+  opacity: 0.8;
+  -webkit-transition: all 300ms ease;
+  -o-transition: all 300ms ease;
+  transition: all 300ms ease;
+  margin: 0 auto;
+}
+
+.testimonials-section .slider .slider-item {
+  width: 200px;
+  height: 210px;
+  padding-top: 10px;
+  outline: none;
+  cursor: pointer;
+}
+
+.testimonials-section .slider .slick-arrow {
+  color: transparent;
+  border: none;
+  width: 66px;
+  min-width: 66px;
+  height: 62px;
+  background-size: 100% 100%;
+  outline: none;
+}
+
+.testimonials-section .slider .slick-next {
+  margin-left: 19px;
+  background: url("../img/testi-right.png") 50% 50% no-repeat;
+}
+
+.testimonials-section .slider .slick-prev {
+  margin-right: 19px;
+  background: url("../img/testi-left.png") 50% 50% no-repeat;
+}
+
+.testimonials-section .text-slider {
+  margin-top: 28px;
+}
+
+.testimonials-section .text-slider .name {
+  width: 890px;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.testimonials-section .text-slider .divider {
+  width: 832px;
+  height: 3px;
+  margin: 18px 0 18px 140px;
+  background-color: #000;
+}
+
+.testimonials-section .text-slider .text {
+  width: 890px;
+  margin: 0 auto;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+/* HOW WORK SECTION */
+
+.how-section {
+  border-top: 5px solid #000;
+  border-bottom: 5px solid #000;
+  padding: 5px 0;
+  color: #fff;
+}
+
+.how-section .how-inner {
+  padding-top: 40px;
+  background: url("../img/how-work-bg.png") 50% 50% no-repeat;
+  background-size: cover;
+}
+
+.how-section .title {
+  font-size: 30px;
+  line-height: 22px;
+  font-weight: 500;
+}
+
+.how-section .content {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.how-section .items {
+  margin-top: 20px;
+}
+
+.how-section .item {
+  margin-top: 44px;
+}
+
+.how-section .item .num {
+  display: inline-block;
+  font-size: 100px;
+  font-weight: 600;
+  line-height: 69px;
+  color: #ffef3b;
+  opacity: .3;
+  width: 56px;
+  text-align: center;
+}
+
+.how-section .item .text {
+  display: inline-block;
+  font-size: 25px;
+  margin-top: 14px;
+  margin-left: 20px;
+  max-width: 265px;
+  vertical-align: top;
+}
+
+.how-section .item:nth-child(even) {
+  position: relative;
+  left: 146px;
+}
+
+/* REQUEST SECTION */
+
+.request-section {
+  padding: 57px 0 91px;
+}
+
+.request-section .title {
+  font-size: 30px;
+  line-height: 23px;
+  text-align: center;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.request-section .request-form {
+  margin-top: 62px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.request-section .request-form .input-wrap {
+  padding: 5px 6px;
+  border: 2px solid #979a9d;
+  width: 295px;
+  height: 61px;
+  margin-right: 38px;
+  background-origin: padding-box;
+}
+
+.request-section .request-form .input-wrap:last-child {
+  margin-right: 0;
+}
+
+.request-section .request-form input,
+.request-section .request-form button {
+  font-size: 25px;
+  outline: none;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+.request-section .request-form input {
+  background-color: #ffffa3;
+  padding: 0 10px;
+}
+
+.request-section .request-form ::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #1f1f31;
+  text-align: center;
+}
+
+.request-section .request-form ::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #1f1f31;
+  text-align: center;
+}
+
+.request-section .request-form :-ms-input-placeholder {
+  /* IE 10+ */
+  color: #1f1f31;
+  text-align: center;
+}
+
+.request-section .request-form :-moz-placeholder {
+  /* Firefox 18- */
+  color: #1f1f31;
+  text-align: center;
+}
+
+.request-section .request-form button {
+  background-color: #b2f6f7;
+  text-align: center;
+}
+
+/* FOOTER */
+
+.zebra {
+  margin-bottom: 7px;
+}
+
+.footer {
+  padding: 38px 0 39px;
+  background-color: #25262c;
+}
+
+.footer .container {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer .copy {
+  color: #fff;
+  font-size: 25px;
+  line-height: 24px;
+}
+
+.footer .molnium {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.footer .molnium .text {
+  font-size: 15px;
+  line-height: 14px;
+  color: #7b837e;
+  width: 142px;
+  margin-right: 8px;
+}
+
+.footer .molnium .molnium-image {
+  width: 100%;
+  height: auto;
+}
+
+/* MODAL FORM */
+
+#modal_form {
+  min-width: 300px;
+  width: 750px;
+  min-height: 320px;
+  border-radius: 5px;
+  border: 3px #000 solid;
+  background: #fff;
+  position: fixed;
+  top: 45%;
+  left: 50%;
+  margin-top: -260px;
+  margin-left: -250px;
+  display: none;
+  opacity: 0;
+  z-index: 9999;
+  padding: 0;
+  color: #1f1f31;
+}
+
+#modal_form #modal_close {
+  width: 21px;
+  height: 21px;
+  position: absolute;
+  top: 0;
+  right: 5px;
+  cursor: pointer;
+  display: block;
+  font-weight: bold;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  font-size: 30px;
+}
+
+#modal_form .modal_table_2col {
+  width: 100%;
+  height: 100%;
+}
+
+#modal_form .modal_table_2col tr {
+  vertical-align: middle;
+}
+
+#modal_form .modal_table_2col td {
+  width: 50%;
+  padding: 25px;
+  vertical-align: middle;
+  height: 100%;
+}
+
+@media (max-width: 767px) {
+  #modal_form .modal_table_2col td {
+    display: block;
+    padding: 10px;
+    float: none;
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+#modal_form .modal_table_2col td:first-child {
+  background-color: #E6E6E6;
+  border-left: 10px solid #f2cd46;
+}
+
+#modal_form .modal_table_2col td:first-child p {
+  margin-bottom: 1em;
+}
+
+@media (max-width: 767px) {
+  #modal_form .modal_table_2col td:first-child {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  #modal_form .modal_table_2col td:last-child {
+    border-left: 10px solid #f2cd46;
+  }
+}
+
+#modal_form h3 {
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+#modal_form .modal_subtitle {
+  text-align: center;
+}
+
+#modal_form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+#modal_form form .input-wrap {
+  border: none;
+  width: 100%;
+  margin-top: 20px;
+}
+
+#modal_form form input {
+  display: block;
+  border: 2px solid #f2cd46;
+  padding: 0 15px;
+  border-radius: 5px;
+  line-height: 38px;
+  width: 100%;
+  outline: none;
+  background: transparent;
+  font-size: 18px;
+}
+
+#modal_form form .button {
+  font-size: 18px;
+  width: 100%;
+  height: 42px;
+  background-color: #f2cd46;
+  margin-top: 30px;
+  border: none;
+  border-radius: 5px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+#overlay {
+  z-index: 999;
+  position: fixed;
+  background-color: #000;
+  opacity: 0.8;
+  -moz-opacity: 0.8;
+  filter: alpha(opacity=80);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  display: none;
 }
