--- a/sass/main.scss
+++ b/sass/main.scss
@@ -71,7 +71,7 @@ $fontColor: #1f1f31;
 body{
   color: $fontColor;
   font-family: 'Exo', sans-serif;
-  background-color: #f8f8f8;
+  // background-color: #f8f8f8;
 }
 a{
   text-decoration: none;
@@ -363,8 +363,55 @@ p, h1, h2, h3 {
 /* PORTFOLIO SECTION */
 .portfolio-section {
   background-color: #fff;
+  padding: 31px 0 39px;
 
+  .title {
+    font-size: 31px;
+    font-weight: 500;
+    line-height: 24px;
+    text-transform: uppercase;
+  }
+  .items {
+    margin-top: 44px;
+    flex-wrap: wrap;
+    align-items: stretch;
 
+    .item {
+      width: 20%;
+      height: auto;
+      position: relative;
+      cursor: pointer;
+
+      .item-image {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
+      .item-overlay {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        top: 0;
+        background-color: rgba(255, 255, 255, .65);
+        opacity: 0;
+        padding: 5px;
+        transition-duration: .3s;
+
+        .item-text {
+          font-size: 20px;
+          color: #201f1f;
+        }
+      }
+      &:hover {
+        .item-overlay {
+          opacity: 1;
+        }
+      }
+    }
+  }
 }
 
 /* ADVANTAGES SECTION */
@@ -443,4 +490,444 @@ p, h1, h2, h3 {
     margin-left: 57px;
     width: 267px;
   }
+}
+
+/* TESTIMONIALS SECTION */
+.testimonials-section {
+  padding-top: 62px;
+  padding-bottom: 105px;
+  
+  .title {
+    margin-bottom: 64px;
+    font-size: 31px;
+    font-weight: 500;
+    line-height: 22px;
+    text-transform: uppercase;
+  }
+
+  .slider {
+    display: flex;
+    align-items: center;
+
+    .slick-active img{
+      float: left;
+      outline: none;
+    }
+    .slick-center {
+
+    }
+    .slick-active.slick-center img {
+      -moz-transform: scale(1.12);
+      -ms-transform: scale(1.12);
+      -o-transform: scale(1.12);
+      -webkit-transform: scale(1.12);
+      color: #e67e22;
+      opacity: 1;
+      transform: scale(1.12);
+      float: none;
+    }
+    .slick-center + .slick-active img,
+    .slick-center + .slick-active + .slick-active img {
+      float: right;
+    }
+
+    img {
+      opacity: 0.8;
+      transition: all 300ms ease;
+      margin: 0 auto;
+    }
+
+    .slider-item {
+      width: 200px;
+      height: 210px;
+      padding-top: 10px;
+      outline: none;
+      cursor: pointer
+    }
+    .slider-item.slick-center {
+      // width: 215px;
+      // min-width: 215px;
+    }
+    .slick-arrow {
+      color: transparent;
+      border: none;
+      width: 66px;
+      min-width: 66px;
+      height: 62px;
+      background-size: 100% 100%;
+      outline: none;
+    }
+    .slick-next {
+      margin-left: 19px;
+      background: url('../img/testi-right.png') 50% 50% no-repeat;
+    }
+    .slick-prev {
+      margin-right: 19px;
+      background: url('../img/testi-left.png') 50% 50% no-repeat;
+    }
+  }
+
+  .text-slider {
+    margin-top: 28px;
+
+    .name {
+      width: 890px;
+      font-size: 20px;
+      line-height: 20px;
+      font-weight: 500;
+      text-align: center;
+      margin: 0 auto;
+    }
+    .divider {
+      width: 832px;
+      height: 3px;
+      margin: 18px 0 18px 140px;
+      background-color: #000;
+    }
+    .text {
+      width: 890px;
+      margin: 0 auto;
+      font-size: 20px;
+      font-weight: 500;
+    }
+  }
+
+}
+
+/* HOW WORK SECTION */
+.how-section {
+  border-top: 5px solid #000;
+  border-bottom: 5px solid #000;
+  padding: 5px 0;
+  color: #fff;
+  
+  .how-inner {
+    padding-top: 40px;
+    background: url('../img/how-work-bg.png') 50% 50% no-repeat;
+    background-size: cover;
+  }
+  .title {
+    font-size: 30px;
+    line-height: 22px;
+    font-weight: 500;
+  }
+
+  .content {
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .items {
+    margin-top: 20px;
+  }
+  .item {
+    margin-top: 44px;
+    .num {
+      display: inline-block;
+      font-size: 100px;
+      font-weight: 600;
+      line-height: 69px;
+      color: #ffef3b;
+      opacity: .3;
+      width: 56px;
+      text-align: center;
+    }
+    .text {
+      display: inline-block;
+      font-size: 25px;
+      margin-top: 14px;
+      margin-left: 20px;
+      max-width: 265px;
+      vertical-align: top;
+    }
+
+    &:nth-child(even) {
+      position: relative;
+      left: 146px;
+    }
+  }
+  .how-image {
+
+  }
+}
+
+/* REQUEST SECTION */
+.request-section {
+  padding: 57px 0 91px;
+
+  .title {
+    font-size: 30px;
+    line-height: 23px;
+    text-align: center;
+    font-weight: 400;
+    text-transform: uppercase;
+  }
+
+  .request-form {
+    margin-top: 62px;
+    justify-content: center;
+    align-items: center;
+
+    .input-wrap {
+      padding: 5px 6px;
+      border: 2px solid #979a9d;
+      width: 295px;
+      height: 61px;
+      margin-right: 38px;
+      background-origin: padding-box;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    input, button {
+      font-size: 25px;
+      outline: none;
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+    input {
+      background-color: #ffffa3;
+      padding: 0 10px;
+    }
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: $fontColor;
+      text-align: center;
+    }
+    ::-moz-placeholder { /* Firefox 19+ */
+      color: $fontColor;
+      text-align: center;
+    }
+    :-ms-input-placeholder { /* IE 10+ */
+      color: $fontColor;
+      text-align: center;
+    }
+    :-moz-placeholder { /* Firefox 18- */
+      color: $fontColor;
+      text-align: center;
+    }
+    button {
+      background-color: #b2f6f7;
+      text-align: center;
+    }
+  }
+}
+
+/* FOOTER */
+.zebra {
+  margin-bottom: 7px;
+}
+.footer {
+  padding: 38px 0 39px;
+  background-color: #25262c;
+
+  .container {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .copy {
+    color: #fff;
+    font-size: 25px;
+    line-height: 24px;
+  }
+
+  .molnium {
+    align-items: center;
+    justify-content: flex-start;
+
+    .text {
+      font-size: 15px;
+      line-height: 14px;
+      color: #7b837e;
+      width: 142px;
+      margin-right: 8px;
+    }
+    .molnium-logo {
+
+    }
+    .molnium-image {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+
+/* MODAL FORM */
+#modal_form {
+  min-width: 300px;
+  width: 750px;
+  // width: 500px; 
+  min-height: 320px;
+  border-radius: 5px;
+  border: 3px #000 solid;
+  background: #fff;
+  position: fixed;
+  top: 45%;
+  left: 50%;
+  margin-top: -260px;
+  margin-left: -250px;
+  display: none;
+  opacity: 0;
+  z-index: 9999; 
+  padding: 0;
+  color: $fontColor;
+
+  @media (max-width: 1006px){
+    // width: 450px;
+    // height: 470px;
+    // margin-top: -235px;
+    // margin-left: -225px;
+  }
+  @media (max-width: 767px){
+    // width: 300px;
+    // height: 400px;
+    // margin-top: -200px;
+    // margin-left: -150px;
+  }
+
+  #modal_close {
+    width: 21px;
+    height: 21px;
+    position: absolute;
+    top: 0;
+    right: 5px;
+    cursor: pointer;
+    display: block;
+    font-weight: bold;
+    transform: rotate(45deg);
+    font-size: 30px;
+  }
+  
+  .modal_table_2col{
+    width: 100%;
+    height: 100%;
+
+    tr{
+      vertical-align: middle;
+    }
+
+    td{
+      
+      width: 50%;
+      padding: 25px;
+      vertical-align: middle;
+      height: 100%;
+
+      @media (max-width: 767px){
+        display: block;
+        padding: 10px;
+        float: none;
+        max-width: 300px;
+        width: 100%;
+        margin: 0 auto;
+      }
+
+      &:first-child{
+        background-color: #E6E6E6;
+        border-left: 10px solid #f2cd46;
+
+        p {
+          margin-bottom: 1em;
+        }
+
+        @media (max-width: 767px){
+          margin-top: 0;
+        }
+      }
+
+      &:last-child{
+
+        @media (max-width: 767px){
+          border-left: 10px solid #f2cd46;
+        }
+      }
+    }
+  }
+  h3 {
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+
+    @media (max-width: 1006px){
+      
+    }
+    @media (max-width: 767px){
+      
+    }
+  }
+  .modal_subtitle {
+    text-align: center;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    .input-wrap {
+      border: none;
+      width: 100%;
+      margin-top: 20px;
+
+      @media (max-width: 1006px){
+        
+      }
+      @media (max-width: 767px){
+        
+      }
+    }
+    input {
+      display: block;
+      border: 2px solid #f2cd46;
+      padding: 0 15px;
+      border-radius: 5px;
+      line-height: 38px;
+      width: 100%;
+      outline: none;
+      background: transparent;
+      font-size: 18px;
+
+      @media (max-width: 1006px){
+        
+      }
+    }
+    .button {
+      font-size: 18px;
+      width: 100%;
+      height: 42px;
+      background-color: #f2cd46;
+      margin-top: 30px;
+      border: none;
+      border-radius: 5px;
+      font-weight: 500;
+      text-transform: uppercase;
+      
+      @media (max-width: 1006px){
+        
+      }
+      @media (max-width: 767px){
+        
+      }
+    }
+  }
+}
+
+#overlay {
+  z-index:999;
+  position:fixed;
+  background-color:#000;
+  opacity:0.8;
+  -moz-opacity:0.8;
+  filter:alpha(opacity=80);
+  width:100%; 
+  height:100%;
+  top:0;
+  left:0;
+  cursor:pointer;
+  display:none;
 }
