--- a/sass/main.scss
+++ b/sass/main.scss
@@ -119,14 +119,6 @@ p, h1, h2, h3 {
 .flex {
   display: flex;
 }
-.button {
-  // background-color: #ee5730;
-  // text-transform: uppercase;
-  // color: #fff;
-  // border: none;
-  // outline: none;
-  // border-radius: 50px;
-}
 .bold {
   font-weight: bold;
 }
@@ -142,6 +134,10 @@ p, h1, h2, h3 {
   padding: 22px 0;
   background-color: #fff;
   font-weight: bold;
+
+  @media (max-width: 1006px){
+    padding: 17px 0;
+  }
   
   .flex {
     justify-content: space-between;
@@ -156,10 +152,11 @@ p, h1, h2, h3 {
     
     img {
       @media (max-width: 1255px){
-
+        width: 173px;
+        height: auto;
       }
       @media (max-width: 1006px){
-
+        width: 138px;
       }
     }
   }
@@ -169,10 +166,12 @@ p, h1, h2, h3 {
     margin-top: 40px;
     
     @media (max-width: 1255px){
-      
+      font-size: 24px;
+      margin-top: 32px;
     }
     @media (max-width: 1006px){
-      
+      font-size: 19px;
+      margin-top: 25px;
     }
     @media (max-width: 767px){
       
@@ -185,10 +184,14 @@ p, h1, h2, h3 {
     margin-top: 35px;
 
     @media (max-width: 1255px){
-      
+      font-size: 32px;
+      line-height: 24px;
+      margin-top: 28px;
     }
     @media (max-width: 1006px){
-      
+      font-size: 25px;
+      line-height: 19px;
+      margin-top: 22px;
     }
     @media (max-width: 767px){
       
@@ -204,16 +207,38 @@ p, h1, h2, h3 {
   border-top: 3px solid #eaa900;
   border-bottom: 3px solid #eaa900;
 
-  .container {
+  @media (max-width: 1006px){
+    padding-top: 6px;
+  }
 
+
+  .container {
+    align-items: flex-start;
   }
 
   .banner-img {
     margin-right: 40px;
+
+    @media (max-width: 1255px){
+      margin-right: 32px;
+      width: 309px;
+      height: auto;
+    }
+    @media (max-width: 1006px){
+       margin-right: 25px;
+       width: 247px;
+    }
   }
   .content {
     padding-top: 39px;  
     flex-direction: column;  
+
+    @media (max-width: 1255px){
+      padding-top: 31px;
+    }
+    @media (max-width: 1006px){
+      padding-top: 24px;
+    }
   }
   .title {
     color: #fff;
@@ -222,11 +247,29 @@ p, h1, h2, h3 {
     line-height: 48px;
     width: 762px;
     text-align: center;
+
+    @media (max-width: 1255px){
+      font-size: 32px;
+      line-height: 38px;
+      width: 609px;
+    }
+    @media (max-width: 1006px){
+      font-size: 25px;
+      line-height: 30px;
+      width: 487px;
+    }
   }
 
   .items {
     margin-top: 104px;
     justify-content: center;
+
+    @media (max-width: 1255px){
+      margin-top: 83px;
+    }
+    @media (max-width: 1006px){
+      margin-top: 66px;
+    }
   }
   .item {
     text-align: center;
@@ -235,20 +278,63 @@ p, h1, h2, h3 {
   .item-1 {
     width: 115px;
     margin-right: 82px;
+
+    @media (max-width: 1255px){
+      width: 92px;
+      margin-right: 65px;
+    }
+    @media (max-width: 1006px){
+      width: 73px;
+      margin-right: 62px;
+    }
   }
   .item-2 {
     width: 205px;
     margin-right: 53px;
+
+    @media (max-width: 1255px){
+      width: 164px;
+      margin-right: 65px;
+    }
+    @media (max-width: 1006px){
+      width: 131px;
+      margin-right: 52px;
+    }
   }
   .item-3 {
     width: 205px;
+
+    @media (max-width: 1255px){
+      width: 164px;
+    }
+    @media (max-width: 1006px){
+      width: 131px;
+    }
   }
   .item-img {
     margin-bottom: 16px;
+
+    @media (max-width: 1255px){
+      margin-bottom: 13px;
+      width: 68px;
+      height: auto;
+    }
+    @media (max-width: 1006px){
+      margin-bottom: 10px;
+      width: 55px;
+
+    }
   }
   .item-text {
     color: #eaa900;
     font-size: 25px;
+
+    @media (max-width: 1255px){
+      font-size: 20px;
+    }
+    @media (max-width: 1006px){
+      font-size: 16px;
+    }
   }
 }
 
@@ -256,6 +342,15 @@ p, h1, h2, h3 {
 .services-section {
   background-color: #fff;
   padding: 55px 0 25px;
+
+  @media (max-width: 1255px){
+    padding: 44px 0 20px;
+  }
+  @media (max-width: 1006px){
+    padding: 35px 0 16px;
+  }
+
+
   
   .text-block {
     align-items: center;
@@ -266,17 +361,47 @@ p, h1, h2, h3 {
       height: 57px;
       background-color: #000;
       margin-right: 24px;
+
+      @media (max-width: 1255px){
+        width: 4px;
+        min-width: 4px;
+        height: 45px;
+        margin-right: 19px;
+      }
+      @media (max-width: 1006px){
+        width: 3px;
+        min-width: 3px;
+        height: 36px;
+        margin-right: 15px;
+      }
     }
     .text {
       font-size: 25px;
+
+      @media (max-width: 1255px){
+        font-size: 20px;
+      }
+      @media (max-width: 1006px){
+        font-size: 16px;
+      }
     }
   }
   .title {
     margin-top: 36px;
     margin-bottom: 44px;
     font-size: 30px;
-    line-height: 30px;
+    line-height: 1em;
     font-weight: 600;
+
+    @media (max-width: 1255px){
+      margin-top: 28px;
+      margin-bottom: 35px;
+      font-size: 24px;
+    }
+    @media (max-width: 1006px){
+      margin-top: 22px;
+      margin-bottom: 28px;
+    }
   }
   .items {
     justify-content: space-between;
@@ -285,20 +410,57 @@ p, h1, h2, h3 {
     width: calc(100%/3 - 6px);
     border: 1px solid #000102;
     padding: 6px;
+
+    @media (max-width: 1255px){
+      padding: 5px;
+    }
+    @media (max-width: 1006px){
+      padding: 4px;
+    }
   }
   .item-1 {
     .item-img {
       margin-right: 32px;
+
+      @media (max-width: 1255px){
+        margin-right: 25px;
+        height: auto;
+        width: 72px;
+      }
+      @media (max-width: 1006px){
+        margin-right: 20px;
+        width: 57px;
+      }
     }
   }
   .item-2 {
     .item-img {
       margin-right: 25px;
+
+      @media (max-width: 1255px){
+        margin-right: 20px;
+        height: auto;
+        width: 48px;
+      }
+      @media (max-width: 1006px){
+        margin-right: 16px;
+        width: 38px;
+      }
     }
   }
   .item-3 {
     .item-img {
       margin-left: -15px;
+
+      @media (max-width: 1255px){
+        margin-left: -12px;
+        height: auto;
+        width: 114px;
+      }
+      @media (max-width: 1006px){
+        margin-left: 9px;
+        width: 91px;
+      }
     }
   }
   .item-inner {
@@ -306,6 +468,13 @@ p, h1, h2, h3 {
     width: 100%;
     padding: 8px 5px 6px;
     background-color: #f2cd46;
+
+    @media (max-width: 1255px){
+      padding: 7px 4px 5px;
+    }
+    @media (max-width: 1006px){
+      padding: 6px 4px 4px;
+    }
 
     .num {
       margin-left: 15px;
@@ -315,36 +484,63 @@ p, h1, h2, h3 {
       font-weight: 500;
       color: #1b1213;
       opacity: .2;
+
+      @media (max-width: 1255px){
+        margin-left: 12px;
+        margin-top: -4px;
+        font-size: 116px;
+        line-height: 80px;
+      }
+      @media (max-width: 1006px){
+        margin-left: 9px;
+        font-size: 92px;
+        line-height: 64px;
+      }
     }
     .top {
-      // position: relative;
       justify-content: space-between;
       align-items: center;
       margin-bottom: 10px;
       height: 122px;
+
+      @media (max-width: 1255px){
+        height: 97px;
+        margin-bottom: 8px;
+      }
+      @media (max-width: 1006px){
+        height: 77px;
+        margin-bottom: 6px;
+      }
     }
     .lines {
-      // position: absolute;
-      // top: 33px;
-      // left: 137px;
+      
     }
     .line {
       height: 4px;
       width: 74px;
       background-color: #353533;
+
+      @media (max-width: 1255px){
+        width: 59px;
+      }
+      @media (max-width: 1006px){
+        width: 47px;
+      }
     }
     .center-line {
       width: 103px;
       margin: 20px 0;
       background-color: #850816;
+
+      @media (max-width: 1255px){
+        width: 82px;
+        margin: 16px 0;
+      }
+      @media (max-width: 1006px){
+        width: 65px;
+        margin: 12px 0;
+      }
     }
-    // .image-box {
-    //   display: flex;
-    //   align-items: center;
-    //   justify-content: center;
-    //   width: 143px;
-    //   height: 122px;
-    // }
 
     .item-title {
       line-height: 47px;
@@ -355,6 +551,15 @@ p, h1, h2, h3 {
       text-transform: uppercase;
       text-align: center;
       letter-spacing: -0.6px;
+
+      @media (max-width: 1255px){
+        line-height: 37px;
+        font-size: 20px;
+      }
+      @media (max-width: 1006px){
+        font-size: 16px;
+        line-height: 29px;
+      }
     }
   }
   
@@ -365,16 +570,35 @@ p, h1, h2, h3 {
   background-color: #fff;
   padding: 31px 0 39px;
 
+  @media (max-width: 1255px){
+    padding: 25px 0 31px;
+  }
+  @media (max-width: 1006px){
+    padding: 20px 0 25px;
+  }
+
   .title {
     font-size: 31px;
     font-weight: 500;
     line-height: 24px;
     text-transform: uppercase;
+
+    @media (max-width: 1255px){
+      font-size: 25px;
+      line-height: 20px; 
+    }
   }
   .items {
     margin-top: 44px;
     flex-wrap: wrap;
     align-items: stretch;
+
+    @media (max-width: 1255px){
+      margin-top: 35px;
+    }
+    @media (max-width: 1006px){
+      margin-top: 28px;
+    }
 
     .item {
       width: 20%;
@@ -403,6 +627,12 @@ p, h1, h2, h3 {
         .item-text {
           font-size: 20px;
           color: #201f1f;
+
+          @media (max-width: 1255px){
+            font-size: 16px;
+            font-weight: 500;
+          }
+
         }
       }
       &:hover {
@@ -419,11 +649,23 @@ p, h1, h2, h3 {
   height: 18px;
   width: 100%;
   background: url('../img/zebra.jpg') 0 50% repeat-x;
+
+  @media (max-width: 1255px){
+    height: 15px;
+  }
+  @media (max-width: 1006px){
+    height: 12px;
+  }
 }
 .advantages-section {
   margin: 11px 0;
-  padding: 34px 33px;
+  padding: 34px 0 33px;
   background-image: linear-gradient(to top, #b6ebff 0%, #d9f7ff 99%, #d9f7ff 100%);
+
+  @media (max-width: 1255px){
+    margin: 9px 0;
+    padding: 27px 0 26px;
+  }
 
   .container {
     position: relative;
@@ -439,24 +681,58 @@ p, h1, h2, h3 {
     opacity: .05;
     bottom: -24px;
     left: -41px;
+
+    @media (max-width: 1350px){
+      left: 0;
+      font-size: 146px;
+      bottom: -30px;
+    }
+    @media (max-width: 1255px){
+      font-size: 116px;
+      line-height: 109px;
+    }
   }
   .title {
     font-size: 30px;
     font-weight: 500;
     line-height: 32px;
+
+    @media (max-width: 1255px){
+      font-size: 24px;
+      line-height: 25px;
+    }
   }
   .items {
     margin-top: 37px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 1255px){
+      margin-top: 29px;
+    }
   }
   .item {
     margin-bottom: 38px;
 
+    @media (max-width: 1255px){
+      margin-bottom: 30px;
+    }
+
     .text {
       font-size: 25px;
       line-height: 29px;
+
+      @media (max-width: 1255px){
+        font-size: 20px;
+        line-height: 23px;
+      }
+    }
+  }
+  .square-img {
+    @media (max-width: 1255px){
+      width: 22px;
+      height: auto;
     }
   }
   .item-1 {
@@ -464,6 +740,14 @@ p, h1, h2, h3 {
     background: url('../img/advantage-1.png') 29px 0 no-repeat;
     margin-right: 117px;
     width: 220px;
+
+    @media (max-width: 1255px){
+      padding-top: 64px;
+      margin-right: 87px;
+      width: 176px;
+      background-position: 23px 0;
+      background-size: 84px auto;
+    }
   }
   .item-2 {
     padding-top: 80px;
@@ -471,24 +755,54 @@ p, h1, h2, h3 {
     margin-left: 72px;
     margin-right: 84px;
     width: 280px;
+
+    @media (max-width: 1255px){
+      padding-top: 64px;
+      margin-left: 57px;
+      margin-right: 67px;
+      width: 224px;
+      background-size: 40px auto;
+    }
   }
   .item-3 {
     padding-top: 80px;
     background: url('../img/advantage-3.png') 54px 0 no-repeat;
     margin-left: 84px;
     width: 257px;
+
+    @media (max-width: 1255px){
+      padding-top: 64px;
+      margin-left: 67px;
+      width: 207px;
+      background-position: 43px 0;
+      background-size: 84px auto;
+    }
   }
   .item-4 {
     padding-top: 106px;
     background: url('../img/advantage-4.png') 50% 0 no-repeat;
     margin-right: 31px;
     width: 314px;
+
+    @media (max-width: 1255px){
+      padding-top: 84px;
+      margin-right: 24px;
+      width: 253px;
+      background-size: 84px auto;
+    }
   }
   .item-5 {
     padding-top: 106px;
     background: url('../img/advantage-5.png') 50% 0 no-repeat;
     margin-left: 57px;
     width: 267px;
+
+    @media (max-width: 1255px){
+      padding-top: 84px;
+      margin-left: 45px;
+      width: 213px;
+      background-size: 89px auto;
+    }
   }
 }
 
@@ -496,6 +810,11 @@ p, h1, h2, h3 {
 .testimonials-section {
   padding-top: 62px;
   padding-bottom: 105px;
+
+  @media (max-width: 1255px){
+    padding-top: 52px;
+    padding-bottom: 84px;
+  }
   
   .title {
     margin-bottom: 64px;
@@ -503,6 +822,12 @@ p, h1, h2, h3 {
     font-weight: 500;
     line-height: 22px;
     text-transform: uppercase;
+
+    @media (max-width: 1255px){
+      margin-bottom: 51px;
+      font-size: 25px;
+      line-height: 18px;
+    }
   }
 
   .slider {
@@ -535,6 +860,11 @@ p, h1, h2, h3 {
       opacity: 0.8;
       transition: all 300ms ease;
       margin: 0 auto;
+
+      @media (max-width: 1255px){
+        width: 150px;
+        height: auto;
+      }
     }
 
     .slider-item {
@@ -542,7 +872,13 @@ p, h1, h2, h3 {
       height: 210px;
       padding-top: 10px;
       outline: none;
-      cursor: pointer
+      cursor: pointer;
+
+      @media (max-width: 1255px){
+        width: 159px;
+        height: 168px;
+        padding-top: 8px;
+      }
     }
     .slider-item.slick-center {
       // width: 215px;
@@ -556,39 +892,74 @@ p, h1, h2, h3 {
       height: 62px;
       background-size: 100% 100%;
       outline: none;
+
+      @media (max-width: 1255px){
+        width: 52px;
+        min-width: 52px;
+        height: 49px;
+      }
     }
     .slick-next {
       margin-left: 19px;
       background: url('../img/testi-right.png') 50% 50% no-repeat;
+
+      @media (max-width: 1255px){
+        margin-left: 15px;
+        background-size: 100%;
+      }
     }
     .slick-prev {
       margin-right: 19px;
       background: url('../img/testi-left.png') 50% 50% no-repeat;
+
+      @media (max-width: 1255px){
+        margin-right: 15px;
+        background-size: 100%;
+      }
     }
   }
 
   .text-slider {
     margin-top: 28px;
 
+    @media (max-width: 1255px){
+      margin-top: 22px;
+    }
+
     .name {
       width: 890px;
       font-size: 20px;
-      line-height: 20px;
+      line-height: 1em;
       font-weight: 500;
       text-align: center;
       margin: 0 auto;
+
+      @media (max-width: 1255px){
+        width: 712px;
+        font-size: 16px;
+      }
     }
     .divider {
       width: 832px;
       height: 3px;
       margin: 18px 0 18px 140px;
       background-color: #000;
+
+      @media (max-width: 1255px){
+        width: 665px;
+        margin: 14px 0 14px 109px;
+      }
     }
     .text {
       width: 890px;
       margin: 0 auto;
       font-size: 20px;
       font-weight: 500;
+
+      @media (max-width: 1255px){
+        width: 712px;
+        font-size: 16px;
+      }
     }
   }
 
@@ -600,16 +971,31 @@ p, h1, h2, h3 {
   border-bottom: 5px solid #000;
   padding: 5px 0;
   color: #fff;
+
+  @media (max-width: 1255px){
+    border-top-width: 4px;
+    border-bottom-width: 4px;
+    padding: 4px 0;
+  } 
   
   .how-inner {
     padding-top: 40px;
     background: url('../img/how-work-bg.png') 50% 50% no-repeat;
     background-size: cover;
+
+    @media (max-width: 1255px){
+      padding-top: 32px;
+    }
   }
   .title {
     font-size: 30px;
     line-height: 22px;
     font-weight: 500;
+
+    @media (max-width: 1255px){
+      font-size: 24px;
+      line-height: 18px;
+    }
   }
 
   .content {
@@ -618,9 +1004,18 @@ p, h1, h2, h3 {
   }
   .items {
     margin-top: 20px;
+
+    @media (max-width: 1255px){
+      margin-top: 16px;
+    }
   }
   .item {
     margin-top: 44px;
+
+    @media (max-width: 1255px){
+      margin-top: 35px;
+    }
+
     .num {
       display: inline-block;
       font-size: 100px;
@@ -630,6 +1025,12 @@ p, h1, h2, h3 {
       opacity: .3;
       width: 56px;
       text-align: center;
+
+      @media (max-width: 1255px){
+        font-size: 80px;
+        line-height: 55px;
+        width: 45px;
+      }
     }
     .text {
       display: inline-block;
@@ -638,15 +1039,30 @@ p, h1, h2, h3 {
       margin-left: 20px;
       max-width: 265px;
       vertical-align: top;
+
+      @media (max-width: 1255px){
+        font-size: 20px;
+        margin-top: 11px;
+        margin-left: 16px;
+        width: 212px;
+      }
     }
 
     &:nth-child(even) {
       position: relative;
       left: 146px;
+
+      @media (max-width: 1255px){
+        left: 116px;
+      }
     }
   }
-  .how-image {
+  .how-img {
 
+    @media (max-width: 1255px){
+      width: 631px;
+      height: auto;  
+    }
   }
 }
 
@@ -654,18 +1070,31 @@ p, h1, h2, h3 {
 .request-section {
   padding: 57px 0 91px;
 
+  @media (max-width: 1255px){
+    padding: 45px 0 72px;
+  }
+
   .title {
     font-size: 30px;
     line-height: 23px;
     text-align: center;
     font-weight: 400;
     text-transform: uppercase;
+
+    @media (max-width: 1255px){
+      font-size: 24px;
+      line-height: 18px;
+    }
   }
 
   .request-form {
     margin-top: 62px;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 1255px){
+      margin-top: 49px;
+    }
 
     .input-wrap {
       padding: 5px 6px;
@@ -674,6 +1103,13 @@ p, h1, h2, h3 {
       height: 61px;
       margin-right: 38px;
       background-origin: padding-box;
+
+      @media (max-width: 1255px){
+        padding: 4px 5px;
+        width: 236px;
+        height: 48px;
+        margin-right: 30px;
+      }
 
       &:last-child {
         margin-right: 0;
@@ -685,10 +1121,18 @@ p, h1, h2, h3 {
       border: none;
       width: 100%;
       height: 100%;
+
+      @media (max-width: 1255px){
+        font-size: 20px;
+      }
     }
     input {
       background-color: #ffffa3;
       padding: 0 10px;
+
+      @media (max-width: 1255px){
+        padding: 0 8px;
+      }
     }
     ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
       color: $fontColor;
@@ -716,10 +1160,18 @@ p, h1, h2, h3 {
 /* FOOTER */
 .zebra {
   margin-bottom: 7px;
+
+  @media (max-width: 1255px){
+    margin-bottom: 6px;
+  }
 }
 .footer {
   padding: 38px 0 39px;
   background-color: #25262c;
+
+  @media (max-width: 1255px){
+    padding: 30px 0 31px;
+  }
 
   .container {
     justify-content: space-between;
@@ -730,6 +1182,11 @@ p, h1, h2, h3 {
     color: #fff;
     font-size: 25px;
     line-height: 24px;
+
+    @media (max-width: 1255px){
+      font-size: 20px;
+      line-height: 19px;
+    }
   }
 
   .molnium {
@@ -742,9 +1199,17 @@ p, h1, h2, h3 {
       color: #7b837e;
       width: 142px;
       margin-right: 8px;
+
+      @media (max-width: 1255px){
+        font-size: 14px;
+        line-height: 12px;
+      }
     }
     .molnium-logo {
 
+      @media (max-width: 1255px){
+        width: 253px;
+      }
     }
     .molnium-image {
       width: 100%;
@@ -758,7 +1223,6 @@ p, h1, h2, h3 {
 #modal_form {
   min-width: 300px;
   width: 750px;
-  // width: 500px; 
   min-height: 320px;
   border-radius: 5px;
   border: 3px #000 solid;
@@ -766,8 +1230,8 @@ p, h1, h2, h3 {
   position: fixed;
   top: 45%;
   left: 50%;
-  margin-top: -260px;
-  margin-left: -250px;
+  margin-top: -160px;
+  margin-left: -375px;
   display: none;
   opacity: 0;
   z-index: 9999; 
