favicon, image optimization

--- a/css/style.css
+++ b/css/style.css
@@ -223,24 +223,24 @@ h3 {
 }
 
 .header .phone {
-  font-size: 40px;
-  line-height: 30px;
-  margin-top: 35px;
+  font-size: 35px;
+  line-height: 26px;
+  margin-top: 40px;
 }
 
 @media (max-width: 1255px) {
   .header .phone {
-    font-size: 32px;
-    line-height: 24px;
-    margin-top: 28px;
+    font-size: 28px;
+    line-height: 22px;
+    margin-top: 32px;
   }
 }
 
 @media (max-width: 1006px) {
   .header .phone {
-    font-size: 25px;
+    font-size: 22px;
     line-height: 19px;
-    margin-top: 22px;
+    margin-top: 25px;
   }
 }
 
@@ -2258,6 +2258,10 @@ h3 {
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
   font-size: 30px;
+}
+
+#modal_form ul {
+  list-style-image: url("../img/marker.jpg");
 }
 
 #modal_form .modal_table_2col {
