--- a/sass/main.scss
+++ b/sass/main.scss
@@ -181,19 +181,19 @@ p, h1, h2, h3 {
   }
    
   .phone {
-    font-size: 40px;
-    line-height: 30px;
-    margin-top: 35px;
+    font-size: 35px;
+    line-height: 26px;
+    margin-top: 40px;
 
     @media (max-width: 1255px){
-      font-size: 32px;
-      line-height: 24px;
-      margin-top: 28px;
+      font-size: 28px;
+      line-height: 22px;
+      margin-top: 32px;
     }
     @media (max-width: 1006px){
-      font-size: 25px;
+      font-size: 22px;
       line-height: 19px;
-      margin-top: 22px;
+      margin-top: 25px;
     }
     @media (max-width: 767px){
       text-align: center;
@@ -1647,6 +1647,10 @@ p, h1, h2, h3 {
     font-weight: bold;
     transform: rotate(45deg);
     font-size: 30px;
+  }
+
+  ul {
+    list-style-image: url('../img/marker.jpg');
   }
   
   .modal_table_2col{
