--- a/ver1/sass/main.scss
+++ b/ver1/sass/main.scss
@@ -131,7 +131,7 @@ p, h1, h2, h3 {
 
 /* HEADER */
 .header {
-  padding: 22px 0 18px;
+  padding: 22px 0;
   background-color: #fff;
   font-weight: bold;
 
@@ -180,80 +180,25 @@ p, h1, h2, h3 {
     }
   }
    
-  .header-contact {
-    flex-direction: column;
-    justify-content: center;
-    font-size: 25px;
+  .phone {
+    font-size: 35px;
+    line-height: 26px;
+    margin-top: 40px;
 
     @media (max-width: 1255px){
-      font-size: 20px;
+      font-size: 28px;
+      line-height: 22px;
+      margin-top: 32px;
     }
-
     @media (max-width: 1006px){
-      font-size: 16px;
+      font-size: 22px;
+      line-height: 19px;
+      margin-top: 25px;
     }
-    
     @media (max-width: 767px){
       text-align: center;
       margin-top: 20px;
     }
-
-    &_item {
-      align-items: center;
-      justify-content: flex-start;
-
-      @media (max-width: 767px){
-        flex-direction: row;
-        width: 100%;
-      }
-
-      &:first-child {
-        margin-bottom: 12px;
-
-        @media (max-width: 1255px){
-          margin-bottom: 10px;
-        }
-
-        @media (max-width: 1006px){
-          margin-bottom: 8px;
-        }
-      }
-    }
-    .phone {
-      vertical-align: middle;
-
-      &_img {
-        margin-right: 20px;
-
-        @media (max-width: 1255px){
-          height: 22px;
-          width: auto;
-          margin-right: 16px;
-        }
-        @media (max-width: 1006px){
-          height: 18px;
-          margin-right: 13px;
-        }
-      }
-    }
-    .time {
-
-      &_img {
-        margin-right: 16px;
-
-        @media (max-width: 1255px){
-          height: 27px;
-          width: auto;
-          margin-right: 13px;
-        }
-
-        @media (max-width: 1006px){
-          height: 22px;
-          margin-right: 10px;
-        }
-      }
-    }
-
   }
 }
 
